# gegl-gtk

./: Makefile.am  README  autogen.sh  configure.ac  gegl-gtk-2.0.pc.in  gegl-gtk-3.0.pc.in  gegl-gtk.doap  gegl-gtk3-0.1.pc.in
docs/reference/: Makefile.am
examples/: .gitignore  Makefile.am  gegl-gtk-basic.c  gegl-gtk-display-op.c  gegl-gtk-paint.c
examples/c/: .gitignore  Makefile.am  gegl-gtk-basic.c  gegl-gtk-display-op.c  gegl-gtk-paint.c  gegl-gtk-scroll.c  gegl-gtk-transform.c  gegl-gtk-warp.c
examples/python/: gegl-gtk-basic.py
examples/vala/: Makefile.am  gegl-gtk-basic.vala
gdkpixbufloader/: Makefile.am  io-gegl.c
gegl-gtk/: .gitignore  GeglGtk.metadata.in  Makefile.am  gegl-gtk-enums.h  gegl-gtk-view.c  gegl-gtk-view.h  gegl-gtk.h  gegl-gtk2-0.1.deps  gegl-gtk2.pc.in  gegl-gtk3-0.1.deps  gegl-gtk3.pc.in
gegl-gtk/internal/: view-helper.c  view-helper.h
operations/: Makefile.am  gegl-gtk-display.c  gtk-display.c
tests/: .gitignore  Makefile.am  test-view-helper.c  test-view.c  utils.c
